# mc

./: .env.example  .gitignore  Cargo.toml  LICENSE  rustfmt.toml
crates/mcl-core/: Cargo.toml  build.rs
crates/mcl-core/java/: pom.xml
crates/mcl-core/java/src/main/java/one/kkx/mc/JavaTool/: Main.java
crates/mcl-core/src/: component.rs  instance.rs  java.rs  main.rs  utils.rs
crates/mcl-core/src/component/authlib_injector/: mod.rs
crates/mcl-core/src/component/fabric/: mod.rs
crates/mcl-core/src/component/minecraft/: arguments.rs  asset_index.rs  library.rs  mod.rs  rules.rs  version.rs  version_manifest.rs
migrations/: 000_init.down.sql  000_init.up.sql
src/: error.rs  main.rs
src/db/: profile.rs  user.rs
src/routes/: mod.rs
src/routes/auth/: error.rs  mod.rs  structures.rs
src/routes/mojang/: mod.rs
