[package]
name = "mcl-core"
version = "0.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
thiserror = "1.0.31"
hex = { version = "0.4.3", features = ["serde"] }
openssl = "0.10.40"
path_macro = "1.0.0"
directories = "4.0.1"
async-trait = "0.1.56"
lazy_static = "1.4.0"
zip = { version = "0.6.2", default-features = false, features = [ "deflate" ]}
enum_dispatch = "0.3.8"
